--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
                 <div class="flame"></div>
             </div>
         </div>
-        <div class="message">
+        <div class="text">
             <p>This candle burns for all those who we remember in their hearts that they may find their way.</p>
         </div>
     </div>
