--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="text">
-            <p>This candle burns for all those who we remember in their hearts that they may find their way.</p>
+            <p>This candle burns for all those who we remember in our hearts that they may find their way.</p>
         </div>
     </div>
     <script src="js/main.js"></script>
