add footer text

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
             <p>This candle burns for all those who we remember in our hearts that they may find their way.</p>
         </div>
     </div>
+    <footer class="site-footer" role="contentinfo">
+        <p class="footer-text">Halloween celebrates All Hallow's Eve, remembering those we've lost, and hope they find their way in the next life.</p>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
