--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Candle Tribute</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
     <div class="table">
@@ -20,6 +20,6 @@
     <footer class="site-footer" role="contentinfo">
         <p class="footer-text">Halloween celebrates All Hallow's Eve, remembering those we've lost, and hope they find their way in the next life.</p>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="src/js/main.js"></script>
 </body>
 </html>
